--- a/Assignment_supervised_learning_flow.ipynb
+++ b/Assignment_supervised_learning_flow.ipynb
@@ -168,22 +168,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "4b47fe56-d611-4b28-be92-673db4d56400",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'UserWarning' from 'sklearn.exceptions' (c:\\Users\\ariel\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\exceptions.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[31]\u001b[39m\u001b[32m, line 19\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mensemble\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RandomForestClassifier\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mwarnings\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mexceptions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ConvergenceWarning, FitFailedWarning, \u001b[38;5;167;01mUserWarning\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m cross_val_predict\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mbase\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m clone\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'UserWarning' from 'sklearn.exceptions' (c:\\Users\\ariel\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\exceptions.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Core libraries only (allowed by assignment)\n",
     "import pandas as pd\n",
@@ -203,7 +191,7 @@
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import warnings\n",
-    "from sklearn.exceptions import ConvergenceWarning, FitFailedWarning, UserWarning\n",
+    "from sklearn.exceptions import ConvergenceWarning, FitFailedWarning\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.base import clone\n",
     "\n",
@@ -1157,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "1fa9ec73",
    "metadata": {},
    "outputs": [],
@@ -1216,69 +1204,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "937b653d",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ariel\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1135: UserWarning: One or more of the test scores are non-finite: [0.65798048 0.6607628  0.65953194 0.89213636 0.88825922 0.88825922\n",
-      " 0.3642111  0.48747966 0.48568368        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.91212966 0.92031208 0.91907436 0.87975884 0.87975884 0.88490457\n",
-      " 0.36489722 0.58315108 0.58739273        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.90515217 0.90817216 0.90434514 0.88978473 0.89078356 0.89047538\n",
-      " 0.36314937 0.59578219 0.59527144        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.85046766 0.85046766 0.85360409 0.84424901 0.83900279 0.83900279\n",
-      " 0.33204364 0.55561428 0.55004128        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89212523 0.90889996 0.90834683 0.88213833 0.88391007 0.87063546\n",
-      " 0.33204364 0.58664507 0.58664507        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.87967244 0.82389478 0.78863197 0.85070936 0.78952023 0.73714778\n",
-      " 0.33204364 0.58664507 0.57827676        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.33204364 0.36541171        nan        nan        nan        nan\n",
-      "        nan        nan 0.33204364 0.36541171        nan        nan\n",
-      "        nan        nan        nan        nan 0.3835243  0.46359368\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.41687488 0.47789677        nan        nan        nan        nan\n",
-      "        nan        nan 0.57826271 0.57917945        nan        nan\n",
-      "        nan        nan        nan        nan 0.61651674 0.5763748\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.65374299 0.65206517        nan        nan        nan        nan\n",
-      "        nan        nan 0.68321547 0.65944914        nan        nan\n",
-      "        nan        nan        nan        nan 0.63182086 0.62838664\n",
-      "        nan        nan        nan        nan        nan        nan\n",
-      " 0.65462738 0.61759615        nan        nan        nan        nan\n",
-      "        nan        nan 0.74082326 0.79437152        nan        nan\n",
-      "        nan        nan        nan        nan 0.76612099 0.78943037\n",
-      "        nan        nan        nan        nan        nan        nan]\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
